--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -8,8 +8,8 @@
             <title>Document</title>
         </head>
         <body>
-            <input id="id" type="text" placeholder="아이디"><br>
-            <input id="psword" type="text"placeholder="비밀번호"><br>
+            <input id="id" type="text" placeholder="아이디"><br><br>
+            <input id="psword" type="text"placeholder="비밀번호"><br><br>
             <button>로그인</button>
         </body>
         </html>
