--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -14,7 +14,7 @@
                   <form class="login-form">
                     <input id = "id" type="text" placeholder="이메일" />
                     <input id = "psword" type="password" placeholder="비밀번호" />
-                    <button>SIGN IN</button>
+                    <p id="button">SIGN IN</p>
                     <p class="message">Not registered? <a href="/register">Create an account</a></p>
                   </form>
                 </div>
